Error Mitigation/MagiCoder/Data/org_omg_CORBA/org_omg_CORBAOutputResult.txt
Sample: _PolicyStub_3
----------------------------------------------------------------
output:
./Data/org_omg_CORBA/javaFiles/_PolicyStub_3.java:1: error: package org.omg.CORBA does not exist
import org.omg.CORBA._PolicyStub;
                    ^
./Data/org_omg_CORBA/javaFiles/_PolicyStub_3.java:5: error: cannot find symbol
        _PolicyStub policyStub = new _PolicyStub();
        ^
  symbol:   class _PolicyStub
  location: class _PolicyStub_3
./Data/org_omg_CORBA/javaFiles/_PolicyStub_3.java:5: error: cannot find symbol
        _PolicyStub policyStub = new _PolicyStub();
                                     ^
  symbol:   class _PolicyStub
  location: class _PolicyStub_3
3 errors


================================================================

Sample: Any_3
----------------------------------------------------------------
output:
./Data/org_omg_CORBA/javaFiles/Any_3.java:1: error: package org.omg.CORBA does not exist
import org.omg.CORBA.Any;
                    ^
./Data/org_omg_CORBA/javaFiles/Any_3.java:2: error: package org.omg.CORBA does not exist
import org.omg.CORBA.AnyOperations;
                    ^
./Data/org_omg_CORBA/javaFiles/Any_3.java:6: error: cannot find symbol
        Any any = new Any();
        ^
  symbol:   class Any
  location: class Any_3
./Data/org_omg_CORBA/javaFiles/Any_3.java:6: error: cannot find symbol
        Any any = new Any();
                      ^
  symbol:   class Any
  location: class Any_3
4 errors


================================================================

Sample: Any_4
----------------------------------------------------------------
output:
./Data/org_omg_CORBA/javaFiles/Any_4.java:1: error: package org.omg.CORBA does not exist
import org.omg.CORBA.Any;
                    ^
./Data/org_omg_CORBA/javaFiles/Any_4.java:2: error: package org.omg.CORBA does not exist
import org.omg.CORBA.AnyOperations;
                    ^
./Data/org_omg_CORBA/javaFiles/Any_4.java:6: error: cannot find symbol
        Any any = new Any();
        ^
  symbol:   class Any
  location: class Any_4
./Data/org_omg_CORBA/javaFiles/Any_4.java:6: error: cannot find symbol
        Any any = new Any();
                      ^
  symbol:   class Any
  location: class Any_4
4 errors


================================================================

Sample: Any_5
----------------------------------------------------------------
output:
./Data/org_omg_CORBA/javaFiles/Any_5.java:1: error: package org.omg.CORBA does not exist
import org.omg.CORBA.Any;
                    ^
./Data/org_omg_CORBA/javaFiles/Any_5.java:2: error: package org.omg.CORBA does not exist
import org.omg.CORBA.AnyOperations;
                    ^
./Data/org_omg_CORBA/javaFiles/Any_5.java:6: error: cannot find symbol
        Any any = new Any();
        ^
  symbol:   class Any
  location: class Any_5
./Data/org_omg_CORBA/javaFiles/Any_5.java:6: error: cannot find symbol
        Any any = new Any();
                      ^
  symbol:   class Any
  location: class Any_5
4 errors


================================================================

Sample: Any_7
----------------------------------------------------------------
output:
./Data/org_omg_CORBA/javaFiles/Any_7.java:1: error: package org.omg.CORBA does not exist
import org.omg.CORBA.Any;
                    ^
./Data/org_omg_CORBA/javaFiles/Any_7.java:2: error: package org.omg.CORBA does not exist
import org.omg.CORBA.AnyOperations;
                    ^
./Data/org_omg_CORBA/javaFiles/Any_7.java:6: error: cannot find symbol
        Any any = new Any();
        ^
  symbol:   class Any
  location: class Any_7
./Data/org_omg_CORBA/javaFiles/Any_7.java:6: error: cannot find symbol
        Any any = new Any();
                      ^
  symbol:   class Any
  location: class Any_7
4 errors


================================================================

Sample: Any_8
----------------------------------------------------------------
output:
./Data/org_omg_CORBA/javaFiles/Any_8.java:1: error: package org.omg.CORBA does not exist
import org.omg.CORBA.Any;
                    ^
./Data/org_omg_CORBA/javaFiles/Any_8.java:2: error: package org.omg.CORBA does not exist
import org.omg.CORBA.AnyOperations;
                    ^
./Data/org_omg_CORBA/javaFiles/Any_8.java:6: error: cannot find symbol
        Any any = new Any();
        ^
  symbol:   class Any
  location: class Any_8
./Data/org_omg_CORBA/javaFiles/Any_8.java:6: error: cannot find symbol
        Any any = new Any();
                      ^
  symbol:   class Any
  location: class Any_8
4 errors


================================================================

Sample: Any_9
----------------------------------------------------------------
output:
./Data/org_omg_CORBA/javaFiles/Any_9.java:1: error: package org.omg.CORBA does not exist
import org.omg.CORBA.Any;
                    ^
./Data/org_omg_CORBA/javaFiles/Any_9.java:2: error: package org.omg.CORBA does not exist
import org.omg.CORBA.DATA_CONVERSION;
                    ^
./Data/org_omg_CORBA/javaFiles/Any_9.java:6: error: cannot find symbol
        Any any = new Any();
        ^
  symbol:   class Any
  location: class Any_9
./Data/org_omg_CORBA/javaFiles/Any_9.java:6: error: cannot find symbol
        Any any = new Any();
                      ^
  symbol:   class Any
  location: class Any_9
./Data/org_omg_CORBA/javaFiles/Any_9.java:9: error: cannot find symbol
        } catch (DATA_CONVERSION e) {
                 ^
  symbol:   class DATA_CONVERSION
  location: class Any_9
5 errors


================================================================

Sample: Any_10
----------------------------------------------------------------
output:
./Data/org_omg_CORBA/javaFiles/Any_10.java:1: error: package org.omg.CORBA does not exist
import org.omg.CORBA.Any;
                    ^
./Data/org_omg_CORBA/javaFiles/Any_10.java:2: error: package org.omg.CORBA does not exist
import org.omg.CORBA.AnyOperations;
                    ^
./Data/org_omg_CORBA/javaFiles/Any_10.java:6: error: cannot find symbol
        Any any = new Any();
        ^
  symbol:   class Any
  location: class Any_10
./Data/org_omg_CORBA/javaFiles/Any_10.java:6: error: cannot find symbol
        Any any = new Any();
                      ^
  symbol:   class Any
  location: class Any_10
4 errors


================================================================

Sample: TypeCode_3
----------------------------------------------------------------
output:
./Data/org_omg_CORBA/javaFiles/TypeCode_3.java:1: error: package org.omg.CORBA does not exist
import org.omg.CORBA.TypeCode;
                    ^
./Data/org_omg_CORBA/javaFiles/TypeCode_3.java:2: error: package org.omg.CORBA does not exist
import org.omg.CORBA.BadKind;
                    ^
./Data/org_omg_CORBA/javaFiles/TypeCode_3.java:8: error: cannot find symbol
            TypeCode typeCode = null; // replace with your TypeCode instance
            ^
  symbol:   class TypeCode
  location: class TypeCode_3
./Data/org_omg_CORBA/javaFiles/TypeCode_3.java:11: error: cannot find symbol
        } catch (BadKind e) {
                 ^
  symbol:   class BadKind
  location: class TypeCode_3
4 errors


================================================================

